plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.13'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'class2'
version = '1.3.2-SNAPSHOT'

java {
	sourceCompatibility = '11'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'

	//mqtt
	implementation 'com.amazonaws:aws-iot-device-sdk-java:1.3.9'
	implementation 'com.amazonaws:aws-iot-device-sdk-java-samples:1.3.9'

	//jackson
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.1'

	//security & jwt
	implementation 'org.springframework.boot:spring-boot-starter-security'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5' //jwt 생성과 검증 담당
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version:'0.11.5' // 생성,파싱

	//Lombok
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// logger
	implementation 'org.slf4j:slf4j-api'
	implementation 'ch.qos.logback:logback-classic'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << "-parameters"
}